==> ChengHeAGV/STM32-Dbus/dbus/mcu/stm32f4xx/ebox/Peripherals/ebox_uart.cpp <==
#include "ebox_uart.h"
#include <stdio.h>
#include <stdarg.h>
#include "string.h"
#define uart_tx_length   100

void Usart::begin(uint32_t baud_rate)
{
    begin(baud_rate,0);
}

void Usart::begin(uint32_t baud_rate,uint8_t use_dma)
{
    
    this->use_dma = use_dma;
    
    switch((uint32_t)USARTx)
    {
        case (uint32_t)USART1_BASE:
            /* gpio parament
            */
            gpio_af_usart       = GPIO_AF_USART1;
        
            /* usart parament
            */
            rcc_usart_clock_cmd = RCC_APB2PeriphClockCmd;
            usart_rcc           = RCC_APB2Periph_USART1;
            usart_irq           = USART1_IRQn;
            /* dma parament
            */
            rcc_dma_clock_cmd   = RCC_AHB1PeriphClockCmd;        
            dma_rcc             = RCC_AHB1Periph_DMA2;
            dma_irq             = DMA2_Stream7_IRQn;
            dma                 = DMA2;
            dma_channel         = DMA_Channel_4;
            dma_stream          = DMA2_Stream7;
        break;
        
        case (uint32_t)USART2_BASE:
            /* gpio parament
            */
            gpio_af_usart       = GPIO_AF_USART2;
        
            /* usart parament
            */
            rcc_usart_clock_cmd = RCC_APB1PeriphClockCmd;
            usart_rcc           = RCC_APB1Periph_USART2;
            usart_irq           = USART2_IRQn;
            /* dma parament
            */
            rcc_dma_clock_cmd   = RCC_AHB1PeriphClockCmd;        
            dma_rcc             = RCC_AHB1Periph_DMA1;
            dma                 = DMA1;
            dma_channel         = DMA_Channel_4;
            dma_irq             = DMA1_Stream6_IRQn;
            dma_stream          = DMA1_Stream6;
        break;
        
        case (uint32_t)USART3_BASE:
            /* gpio parament
            */
            gpio_af_usart       = GPIO_AF_USART3;
        
            /* usart parament
            */
            rcc_usart_clock_cmd = RCC_APB1PeriphClockCmd;
            usart_rcc           = RCC_APB1Periph_USART3;
            usart_irq           = USART3_IRQn;
            /* dma parament
            */
            rcc_dma_clock_cmd   = RCC_AHB1PeriphClockCmd;        
            dma_rcc             = RCC_AHB1Periph_DMA1;
            dma                 = DMA1;
            dma_channel         = DMA_Channel_4;
            dma_irq             = DMA1_Stream3_IRQn;
            dma_stream          = DMA1_Stream3;
        break;   
    
        case (uint32_t)UART4_BASE:
            /* gpio parament
            */
            gpio_af_usart       = GPIO_AF_UART4;
        
            /* usart parament
            */
            rcc_usart_clock_cmd = RCC_APB1PeriphClockCmd;
            usart_rcc           = RCC_APB1Periph_UART4;
            usart_irq           = UART4_IRQn;
            /* dma parament
            */
            rcc_dma_clock_cmd   = RCC_AHB1PeriphClockCmd;        
            dma_rcc             = RCC_AHB1Periph_DMA1;
            dma                 = DMA1;
            dma_channel         = DMA_Channel_4;
            dma_irq             = DMA1_Stream4_IRQn;
            dma_stream          = DMA1_Stream4;
        break;   
    
        case (uint32_t)UART5_BASE:
            /* gpio parament
            */
            gpio_af_usart       = GPIO_AF_UART5;
        
            /* usart parament
            */
            rcc_usart_clock_cmd = RCC_APB1PeriphClockCmd;
            usart_rcc           = RCC_APB1Periph_UART5;
            usart_irq           = UART5_IRQn;
            /* dma parament
            */
            rcc_dma_clock_cmd   = RCC_AHB1PeriphClockCmd;        
            dma_rcc             = RCC_AHB1Periph_DMA1;
            dma                 = DMA1;
            dma_channel         = DMA_Channel_4;
            dma_irq             = DMA1_Stream7_IRQn;
            dma_stream          = DMA1_Stream7;
        break;   
		 case (uint32_t)USART6_BASE:
			/* gpio parament
			*/
			gpio_af_usart       = GPIO_AF_USART6;
		
			/* usart parament
			*/
			rcc_usart_clock_cmd = RCC_APB1PeriphClockCmd;
			usart_rcc           = RCC_APB2Periph_USART6;
			usart_irq           = USART6_IRQn;
			/* dma parament
			*/
			rcc_dma_clock_cmd   = RCC_AHB1PeriphClockCmd;        
			dma_rcc             = RCC_AHB1Periph_DMA2;
			dma                 = DMA2;
			dma_channel         = DMA_Channel_5;
			dma_irq             = DMA1_Stream7_IRQn;
			dma_stream          = DMA1_Stream7;
		break;   
   
    }               
    usart_config(baud_rate);
    if(this->use_dma == 1)
    {
        dma_config();
    }
}

void Usart::interrupt(FunctionalState enable)
{
    NVIC_InitTypeDef NVIC_InitStructure;

    USART_ITConfig(USARTx, USART_IT_RXNE, enable);
    USART_ITConfig(USARTx, USART_IT_TC, enable);
    USART_ClearITPendingBit(USARTx, USART_IT_TC);

    NVIC_InitStructure.NVIC_IRQChannel = usart_irq;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);

}

void Usart::wait_busy()
{
    switch((uint32_t)USARTx)
    {
    case (uint32_t)USART1_BASE:
        while(uart_busy[0] == 1);
        break;
    case (uint32_t)USART2_BASE:
        while(uart_busy[1] == 1);
        break;
    case (uint32_t)USART3_BASE:
        while(uart_busy[2] == 1);
        break;
    case (uint32_t)UART4_BASE:
        while(uart_busy[3] == 1);
        break;
    case (uint32_t)UART5_BASE:
        while(uart_busy[4] == 1);
        break;
    case (uint32_t)USART6_BASE:
        while(uart_busy[5] == 1);
        break;
    }
}

void Usart::set_busy()
{
    switch((uint32_t)USARTx)
    {
    case (uint32_t)USART1_BASE:
        uart_busy[0] = 1;
        break;
    case (uint32_t)USART2_BASE:
        uart_busy[1] = 1;
        break;
    case (uint32_t)USART3_BASE:
        uart_busy[2] = 1;
        break;
    case (uint32_t)UART4_BASE:
        uart_busy[3] = 1;
        break;
    case (uint32_t)UART5_BASE:
        uart_busy[4] = 1;
        break;
    case (uint32_t)USART6_BASE:
        uart_busy[5] = 1;
        break;
    }
}

    void USART1_IRQHandler(void)
    {
        if(USART_GetITStatus(USART1, USART_IT_RXNE) == SET)
        {
            if(usart_callback_table[0][0] != 0)
                usart_callback_table[0][0]();
            USART_ClearITPendingBit(USART1, USART_IT_RXNE);
        }
        if(USART_GetITStatus(USART1, USART_IT_TC) == SET)
        {
            uart_busy[0] = 0;
            if(usart_callback_table[0][1] != 0)
                usart_callback_table[0][1]();
            USART_ClearITPendingBit(USART1, USART_IT_TC);
        }
    }

    void USART2_IRQHandler(void)
    {
        if(USART_GetITStatus(USART2, USART_IT_RXNE) == SET)
        {
            if(usart_callback_table[1][0] != 0)
                usart_callback_table[1][0]();
            USART_ClearITPendingBit(USART2, USART_IT_RXNE);
        }
        if(USART_GetITStatus(USART2, USART_IT_TC) == SET)
        {
            uart_busy[1] = 0;
            if(usart_callback_table[1][1] != 0)
                usart_callback_table[1][1]();
            USART_ClearITPendingBit(USART2, USART_IT_TC);
        }
    }

    void USART3_IRQHandler(void)
    {
        if(USART_GetITStatus(USART3, USART_IT_RXNE) == SET)
        {
            if(usart_callback_table[2][0] != 0)
                usart_callback_table[2][0]();
            USART_ClearITPendingBit(USART3, USART_IT_RXNE);
        }
        if(USART_GetITStatus(USART3, USART_IT_TC) == SET)
        {
            uart_busy[2] = 0;
            if(usart_callback_table[2][1] != 0)
                usart_callback_table[2][1]();
            USART_ClearITPendingBit(USART3, USART_IT_TC);
        }
    }

    void UART4_IRQHandler(void)
    {
        if(USART_GetITStatus(UART4, USART_IT_RXNE) == SET)
        {
            if(usart_callback_table[3][0] != 0)
                usart_callback_table[3][0]();
            USART_ClearITPendingBit(UART4, USART_IT_RXNE);
        }
        if(USART_GetITStatus(UART4, USART_IT_TC) == SET)
        {
            uart_busy[3] = 0;
            if(usart_callback_table[3][1] != 0)
                usart_callback_table[3][1]();
            USART_ClearITPendingBit(UART4, USART_IT_TC);
        }
    }

    void UART5_IRQHandler(void)
    {
        if(USART_GetITStatus(UART5, USART_IT_RXNE) == SET)
        {
            if(usart_callback_table[4][0] != 0)
                usart_callback_table[4][0]();
            USART_ClearITPendingBit(UART5, USART_IT_RXNE);
        }
        if(USART_GetITStatus(UART5, USART_IT_TC) == SET)
        {
            uart_busy[4] = 0;
            if(usart_callback_table[4][1] != 0)
                usart_callback_table[4][1]();
            USART_ClearITPendingBit(UART5, USART_IT_TC);
        }
    }
